- quick message to Ash

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Heroku Deployment</title>
+    <title>08.08.2015</title>
 </head>
 <body>
-This is just a quick test to see if it works with the deployment
+<div>Hey Love Bug!</div>
+<div>It's working although very useless right now. We'll have it up in no time :)</div>
+<div>Love you!</div>
 </body>
 </html>
