--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>08.08.2015</title>
+    <title>Ashley and Shane</title>
 </head>
 <body>
-<div>Hey Love Bug!</div>
-<div>It's working although very useless right now. We'll have it up in no time :)</div>
-<div>Love you!</div>
+    <img src="assets/HanaDriveConstruction.jpg" />
 </body>
 </html>
